tests/ui/errors/snapshots/parse_rust_turbofish.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:5:19]
 4 │ fn test() {
 5 │   let x = identity::<int>(5);
   ·                   ─┬
   ·                    ╰── invalid syntax
 6 │ }
   ╰────
  help: Lisette does not use turbofish syntax. Use `identity<T>(...)` instead · code: [parse.syntax_error]
